--- a/.gitea/workflows/deploy.yaml
+++ b/.gitea/workflows/deploy.yaml
@@ -27,7 +27,7 @@ jobs:
           apt-get install helm
 
       - name: Install netcat
-        run: apt update && apt install netcat
+        run: apt update && apt-get -y install netcat
 
       - name: NC
         run: nc -z 192.168.1.68 6443
