--- a/.gitea/workflows/deploy.yaml
+++ b/.gitea/workflows/deploy.yaml
@@ -6,13 +6,13 @@ on:
       - main
 
 jobs:
-  code-quality:
-    name: Check code quality
-    uses: ./.gitea/workflows/code-quality.yaml
+  # code-quality:
+  #   name: Check code quality
+  #   uses: ./.gitea/workflows/code-quality.yaml
 
   release:
     name: Release
-    needs: code-quality
+    # needs: code-quality
     runs-on: ubuntu-latest
     steps: 
       - name: Checkout
@@ -35,6 +35,14 @@ jobs:
         run: |
           mkdir $HOME/.kube
           echo $KUBE_CONFIG > $HOME/.kube/config
-          make redeploy
+          echo $(helm upgrade bingus . --dry-run | wc -c)
         env:
-          KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
+          KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }
+
+      # - name: Run helm command
+      #   run: |
+      #     mkdir $HOME/.kube
+      #     echo $KUBE_CONFIG > $HOME/.kube/config
+      #     make redeploy
+      #   env:
+      #     KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
