--- a/.gitea/workflows/deploy.yaml
+++ b/.gitea/workflows/deploy.yaml
@@ -35,6 +35,7 @@ jobs:
         run: |
           mkdir $HOME/.kube
           echo $KUBE_CONFIG > $HOME/.kube/config
+          helm dependency build
           echo $(helm upgrade bingus . --dry-run | wc -c)
         env:
           KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }
