--- a/.gitea/workflows/deploy.yaml
+++ b/.gitea/workflows/deploy.yaml
@@ -31,10 +31,10 @@ jobs:
           curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" 
           install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
 
-      # - name: Run helm command
-      #   run: |
-      #     mkdir $HOME/.kube
-      #     echo $KUBE_CONFIG > $HOME/.kube/config
-      #     make redeploy
-      #   env:
-      #     KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
+      - name: Run helm command
+        run: |
+          mkdir $HOME/.kube
+          echo $KUBE_CONFIG > $HOME/.kube/config
+          make redeploy
+        env:
+          KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
