--- a/.gitea/workflows/deploy.yaml
+++ b/.gitea/workflows/deploy.yaml
@@ -6,13 +6,13 @@ on:
       - main
 
 jobs:
-  # code-quality:
-  #   name: Check code quality
-  #   uses: ./.gitea/workflows/code-quality.yaml
+  code-quality:
+    name: Check code quality
+    uses: ./.gitea/workflows/code-quality.yaml
 
   release:
     name: Release
-    # needs: code-quality
+    needs: code-quality
     runs-on: ubuntu-latest
     steps: 
       - name: Checkout
