--- a/templates/observability/grafana/depl.yaml
+++ b/templates/observability/grafana/depl.yaml
@@ -15,6 +15,8 @@ spec:
         app: grafana
         app.kubernetes.io/name: grafana
     spec:
+      securityContext:
+        runAsUser: 0
       volumes:
         - name: data
           persistentVolumeClaim:
