--- a/templates/observability/loki/depl.yaml
+++ b/templates/observability/loki/depl.yaml
@@ -15,6 +15,9 @@ spec:
         app: loki
         app.kubernetes.io/name: loki
     spec:
+      securityContext:
+        runAsUser: 0
+
       volumes:
         - name: data
           persistentVolumeClaim:
