--- a/templates/observability/prometheus/depl.yaml
+++ b/templates/observability/prometheus/depl.yaml
@@ -15,6 +15,9 @@ spec:
         app: prometheus
         app.kubernetes.io/name: prometheus
     spec:
+      securityContext:
+        runAsUser: 0
+
       volumes:
         - name: data
           persistentVolumeClaim:
