--- a/config/prometheus/configuration.yaml
+++ b/config/prometheus/configuration.yaml
@@ -9,6 +9,5 @@ rule_files:
 scrape_configs:
   - job_name: prometheus
     static_configs:
-      - targets: 
-        - "192.168.1.68:9100" # node-exporter: thinkcentre
-        - "192.168.1.69:9100" # node-exporter: main array
+      - targets:
+        {{ .Values.promHosts }} 
