--- a/templates/nfs/pv.yaml
+++ b/templates/nfs/pv.yaml
@@ -15,7 +15,7 @@ spec:
     - nfsvers=4.1
   nfs:
     path: /bulk-pool/nfs
-    server: 192.168.1.69
+    server: {{ .Values.nfsArray }}
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -34,4 +34,4 @@ spec:
     - nfsvers=4.1
   nfs:
     path: /cache-pool/nfs
-    server: 192.168.1.69
+    server: {{ .Values.nfsArray }}
