--- a/values.yaml
+++ b/values.yaml
@@ -27,8 +27,8 @@ promHosts:
 # image_grafana: "grafana/grafana:10.2.0"
 # image_promtail: "grafana/promtail:main-66b36cb"
 # image_loki: "grafana/loki:main-66b36cb"
-# image_dind: docker:23.0.6-dind
 
+image_dind: docker:23.0.6-dind
 image_jellyfin: "linuxserver/jellyfin"
 image_nginx: "nginx"
 image_wireguard: "linuxserver/wireguard"
