--- a/values.yaml
+++ b/values.yaml
@@ -1,9 +1,9 @@
 # Webserver
-domainName: kwkaiser-test
+domainName: kwkaiser
 tld: io
 piracyIp: "143.244.47.87"
-nfsArray: "192.168.1.68"
-promHosts: ["192.168.1.68:9100"]
+nfsArray: "192.168.2.103"
+promHosts: ["192.168.2.103:9100"]
 
 # image_jellyfin: "linuxserver/jellyfin:2021.12.16"
 # image_nginx: "nginx:1.25.3"
