Set admin puid, pgid

--- a/templates/radarr/depl.yaml
+++ b/templates/radarr/depl.yaml
@@ -24,6 +24,13 @@ spec:
           ports:
             - containerPort: 7878
 
+          env:
+            - name: PUID
+              value: 0
+
+            - name: PGID
+              value: 0
+
           volumeMounts:
             - name: data
               mountPath: /config
