Use string value for depl

--- a/templates/radarr/depl.yaml
+++ b/templates/radarr/depl.yaml
@@ -26,10 +26,10 @@ spec:
 
           env:
             - name: PUID
-              value: 0
+              value: "0"
 
             - name: PGID
-              value: 0
+              value: "0"
 
           volumeMounts:
             - name: data
