--- a/templates/sonarr/depl.yaml
+++ b/templates/sonarr/depl.yaml
@@ -24,6 +24,13 @@ spec:
           ports:
             - containerPort: 8989
 
+          env:
+            - name: PUID
+              value: "0"
+
+            - name: PGID
+              value: "0"
+
           volumeMounts:
             - name: data
               mountPath: /config
