--- a/config/nginx/conf.d/lib.conf
+++ b/config/nginx/conf.d/lib.conf
@@ -2,7 +2,7 @@ server {
   listen 443 ssl;
   include https.conf;
 
-  server_name books.*;
+  server_name lib.*;
 
   fastcgi_buffers 16 16k;
   fastcgi_buffer_size 32k;
