--- a/config/nginx/conf.d/lib.conf
+++ b/config/nginx/conf.d/lib.conf
@@ -1,21 +1,21 @@
 server {
   listen 443 ssl;
   include https.conf;
-
-  server_name lib.*;
-
-  fastcgi_buffers 16 16k;
-  fastcgi_buffer_size 32k;
+  server_name  lib.*;
+ 
+  client_max_body_size 20M;
 
   include authelia-location.conf;
 
-  location / {
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection $http_connection;
-
+  location / { 
     include authelia-proxy.conf;
     include authelia-endpoint.conf;
 
-    proxy_pass http://calibre;
+    proxy_set_header        Host            $http_host;
+    proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header        X-Scheme        $scheme;
+
+    proxy_bind              $server_addr;
+    proxy_pass              http://calibre;
   }
 }
