--- a/config/nginx/conf.d/lib.conf
+++ b/config/nginx/conf.d/lib.conf
@@ -5,11 +5,11 @@ server {
  
   client_max_body_size 20M;
 
-  # include authelia-location.conf;
+  include authelia-location.conf;
 
   location / { 
-    # include authelia-proxy.conf;
-    # include authelia-endpoint.conf;
+    include authelia-proxy.conf;
+    include authelia-endpoint.conf;
 
     proxy_set_header        Host            $http_host;
     proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
