rm pod for cron upon finishing

--- a/templates/gitea/renovate/cron.yaml
+++ b/templates/gitea/renovate/cron.yaml
@@ -6,8 +6,11 @@ metadata:
   name: renovate
 spec:
   schedule: "0 0 * * *"
+  concurrencyPolicy: Forbid
   jobTemplate:
     spec:
+      ttlSecondsAfterFinished: "120"
+      restartPolicy: Never
       template:
         spec:
           restartPolicy: Never
