--- a/.gitea/workflows/deploy.yaml
+++ b/.gitea/workflows/deploy.yaml
@@ -9,6 +9,8 @@ jobs:
   code-quality:
     name: Check code quality
     uses: ./.gitea/workflows/code-quality.yaml
+    with:
+      REF: ${{ github.event.ref }}
 
   release:
     name: Release
