--- a/.gitea/workflows/pr.yaml
+++ b/.gitea/workflows/pr.yaml
@@ -10,4 +10,4 @@ jobs:
     name: Check code quality
     uses: ./.gitea/workflows/code-quality.yaml
     with:
-      REF: ${{ github.ref }}
+      REF: ${{ github.event.pull_request.head.sha }}
