--- a/.gitea/workflows/code-quality.yaml
+++ b/.gitea/workflows/code-quality.yaml
@@ -7,7 +7,7 @@ inputs:
     required: false
     default: "1"
 
-name: Code qual subworkflow
+name: Code qual subworkflow!
 on:
   workflow_call: 
 
