--- a/.gitea/workflows/deploy.yaml
+++ b/.gitea/workflows/deploy.yaml
@@ -15,7 +15,9 @@ jobs:
 
       - name: Echo
         run: |
-          echo "bingus ${{ inputs.REF }}"
+          echo "bingus! ${{ github.event.pull_request.head.sha }}"
+          echo "foo ${{ github.ref }}"
+          echo "bar ${{ github.head_ref }}"
           echo "bongus $GITHUB_SHA"
 
       - name: Install helm
