--- a/.gitea/workflows/pr.yaml
+++ b/.gitea/workflows/pr.yaml
@@ -33,7 +33,7 @@ jobs:
           cp kubeconform /usr/local/bin
 
       - name: Generate templated chart
-        run: helm dependency build && helm template . > template.yaml 
+        run: helm dependency build && helm template env=prod
 
       - name: Lint templated chart
         run: kubeconform ./template.yaml 
