--- a/.gitea/workflows/deploy.yaml
+++ b/.gitea/workflows/deploy.yaml
@@ -31,7 +31,7 @@ jobs:
           cp kubeconform /usr/local/bin
 
       - name: Generate templated chart
-        run: helm dependency build && make template env=prod
+        run: helm dependency build && make env=prod template 
 
       - name: Lint templated chart
         run: kubeconform ./template.yaml
