--- a/.gitea/workflows/pr.yaml
+++ b/.gitea/workflows/pr.yaml
@@ -33,7 +33,7 @@ jobs:
           cp kubeconform /usr/local/bin
 
       - name: Generate templated chart
-        run: helm dependency build && helm env=prod template 
+        run: helm dependency build && make env=prod template 
 
       - name: Lint templated chart
         run: kubeconform ./template.yaml 
