feat(docker registry): Deploy docker registry with TLS (#18)
deploy docker registry with TLS

Reviewed-on: https://git.kwkaiser.io/kwkaiser/homelab-application/pulls/18
Co-authored-by: Karl Kaiser <karl@kwkaiser.io>
Co-committed-by: Karl Kaiser <karl@kwkaiser.io>

--- a/values/shared.yaml
+++ b/values/shared.yaml
@@ -43,3 +43,4 @@ image_prometheus: "bitnami/prometheus"
 image_grafana: "grafana/grafana"
 image_promtail: "grafana/promtail"
 image_loki: "grafana/loki"
+image_registry: "registry:2"
