--- a/.gitea/workflows/deploy.yaml
+++ b/.gitea/workflows/deploy.yaml
@@ -66,3 +66,16 @@ jobs:
         env:
           PROD: 'true'
           KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
+          k8s_nginx_certificate: ${{ secrets.K8S_NGINX_CERTIFICATE }}
+          k8s_nginx_certificate_key: ${{ secrets.K8S_NGINX_CERTIFICATE_KEY }}
+          k8s_wireguard_key: ${{ secrets.K8S_WIREGUARD_KEY }}
+          k8s_authelia_encryption_key: ${{ secrets.K8S_AUTHELIA_ENCRYPTION_KEY }}
+          k8s_authelia_session_secret: ${{ secrets.K8S_AUTHELIA_SESSION_SECRET }}
+          k8s_openldap_binddn_password: ${{ secrets.K8S_OPENLDAP_BINDDN_PASSWORD }}
+          k8s_gitea_db_password: ${{ secrets.K8S_GITEA_DB_PASSWORD }}
+          k8s_gitea_renovate_token: ${{ secrets.K8S_GITEA_RENOVATE_TOKEN }}
+          k8s_gitea_runner_token: ${{ secrets.K8S_GITEA_RUNNER_TOKEN }}
+          k8s_miniflux_db_password: ${{ secrets.K8S_MINIFLUX_DB_PASSWORD }}
+          k8s_miniflux_db_connection_string: ${{ secrets.K8S_MINIFLUX_DB_CONNECTION_STRING }}
+          k8s_registry_certificate: ${{ secrets.K8S_REGISTRY_CERTIFICATE }}
+          k8s_registry_certificate_key: ${{ secrets.K8S_REGISTRY_CERTIFICATE_KEY }}
