--- a/.gitea/workflows/deploy.yaml
+++ b/.gitea/workflows/deploy.yaml
@@ -79,3 +79,4 @@ jobs:
           k8s_miniflux_db_connection_string: ${{ secrets.K8S_MINIFLUX_DB_CONNECTION_STRING }}
           k8s_registry_certificate: ${{ secrets.K8S_REGISTRY_CERTIFICATE }}
           k8s_registry_certificate_key: ${{ secrets.K8S_REGISTRY_CERTIFICATE_KEY }}
+          k8s_registry_htpasswd: ${{ secrets.K8S_REGISTRY_HTPASSWD }}
