--- a/config/nginx/conf.d/registry.conf
+++ b/config/nginx/conf.d/registry.conf
@@ -14,7 +14,7 @@ server {
 
 
     # proxy_set_header Host $http_host;
-    proxy_pass http://registry;
+    proxy_pass https://registry;
     # proxy_set_header Host $http_host; # required for docker client's sake
     # proxy_set_header X-Real-IP $remote_addr; # pass on real client's IP
     # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
