chore(container versioning) (#22)
Add better container versioning to the container images listed under `values/shared.yaml`, primarily for the benefit of renovate bot auto-incrementing versions.

Reviewed-on: https://git.kwkaiser.io/kwkaiser/homelab-application/pulls/22
Co-authored-by: Karl Kaiser <karl@kwkaiser.io>
Co-committed-by: Karl Kaiser <karl@kwkaiser.io>

--- a/templates/gitea/app/depl.yaml
+++ b/templates/gitea/app/depl.yaml
@@ -28,7 +28,7 @@ spec:
 
           env:
             - name: POSTGRES_USER
-              value: postgres
+              value: {{ .Values.image_gitea_db }}
 
             - name: POSTGRES_PASSWORD
               valueFrom:
