--- a/values/shared.yaml
+++ b/values/shared.yaml
@@ -1,46 +1,49 @@
-# Webserver
-# image_jellyfin: "linuxserver/jellyfin:2021.12.16"
-# image_nginx: "nginx:1.25.3"
-# image_wireguard: "linuxserver/wireguard:1.0.20210914"
-# image_qbittorrent: "linuxserver/qbittorrent:4.6.0"
-# image_radarr: "linuxserver/radarr:5.0.3"
-# image_sonarr: "linuxserver/sonarr:3.0.10"
-# image_prowlarr: "linuxserver/prowlarr:1.9.4"
-# image_autobrr: "ghcr.io/autobrr/autobrr:pr-1216"
-# image_ldap_user_manager: "wheelybird/ldap-user-manager:v1.11" 
-# image_openldap: "osixia/openldap:1.5.0"
-# image_miniflux_db: "postgres:16.0"
-# image_miniflux: "miniflux/miniflux:2.0.49"
-# image_gitea_runner: "gitea/act_runner:0.2.6-dind-rootless"
-# image_gitea_renovate: "renovate/renovate:37.33.5"
-# image_gitea: "gitea/gitea:1.20.5"
-# image_calibre: "linuxserver/calibre-web:0.6.21"
-# image_authelia: "authelia/authelia:4.37.5"
-# image_prometheus: "bitnami/prometheus:2.47.2"
-# image_grafana: "grafana/grafana:10.2.0"
-# image_promtail: "grafana/promtail:main-66b36cb"
-# image_loki: "grafana/loki:main-66b36cb"
+# image_dind: docker:23.0.6-dind
+# image_jellyfin: "linuxserver/jellyfin"
+# image_nginx: "nginx"
+# image_wireguard: "linuxserver/wireguard"
+# image_qbittorrent: "linuxserver/qbittorrent"
+# image_radarr: "linuxserver/radarr"
+# image_sonarr: "linuxserver/sonarr"
+# image_prowlarr: "linuxserver/prowlarr"
+# image_autobrr: "ghcr.io/autobrr/autobrr"
+# image_ldap_user_manager: "wheelybird/ldap-user-manager" 
+# image_openldap: "osixia/openldap"
+# image_miniflux_db: "postgres"
+# image_miniflux: "miniflux/miniflux"
+# image_gitea_runner: "gitea/act_runner"
+# image_gitea_renovate: "renovate/renovate"
+# image_gitea: "gitea/gitea"
+# image_gitea_db: "postgres"
+# image_calibre: "linuxserver/calibre-web"
+# image_authelia: "authelia/authelia"
+# image_prometheus: "bitnami/prometheus"
+# image_grafana: "grafana/grafana"
+# image_promtail: "grafana/promtail"
+# image_loki: "grafana/loki"
+# image_registry: "registry:2"
 
 image_dind: docker:23.0.6-dind
-image_jellyfin: "linuxserver/jellyfin"
-image_nginx: "nginx"
-image_wireguard: "linuxserver/wireguard"
-image_qbittorrent: "linuxserver/qbittorrent"
-image_radarr: "linuxserver/radarr"
-image_sonarr: "linuxserver/sonarr"
-image_prowlarr: "linuxserver/prowlarr"
-image_autobrr: "ghcr.io/autobrr/autobrr"
-image_ldap_user_manager: "wheelybird/ldap-user-manager" 
-image_openldap: "osixia/openldap"
-image_miniflux_db: "postgres"
-image_miniflux: "miniflux/miniflux"
-image_gitea_runner: "gitea/act_runner"
-image_gitea_renovate: "renovate/renovate"
-image_gitea: "gitea/gitea"
-image_calibre: "linuxserver/calibre-web"
-image_authelia: "authelia/authelia"
-image_prometheus: "bitnami/prometheus"
-image_grafana: "grafana/grafana"
-image_promtail: "grafana/promtail"
-image_loki: "grafana/loki"
+image_jellyfin: "linuxserver/jellyfin:10.8.13"
+image_nginx: "nginx:stable-alpine3.17-slim"
+image_wireguard: "linuxserver/wireguard:1.0.20210914-legacy"
+image_qbittorrent: "linuxserver/qbittorrent:4.6.4"
+image_radarr: "linuxserver/radarr:5.3.6"
+image_sonarr: "linuxserver/sonarr:4.0.2"
+image_prowlarr: "linuxserver/prowlarr:1.15.0"
+image_autobrr: "ghcr.io/autobrr/autobrr:1.39.1"
+image_ldap_user_manager: "wheelybird/ldap-user-manager:v1.11" 
+image_openldap: "osixia/openldap:1.5.0"
+image_miniflux_db: "postgres:16.2-alpine3.19"
+image_miniflux: "miniflux/miniflux:2.1.1"
+image_gitea_runner: "gitea/act_runner:0.2.8"
+image_gitea_renovate: "renovate/renovate:37-slim"
+image_gitea: "gitea/gitea:1.21.10"
+image_gitea_db: "postgres:16.2-alpine3.19"
+image_calibre: "linuxserver/calibre-web:0.6.21"
+image_authelia: "authelia/authelia:4.38"
+image_prometheus: "bitnami/prometheus:2.51.1"
+image_grafana: "grafana/grafana:10.1.9"
+image_promtail: "grafana/promtail:2.8.11"
+image_loki: "grafana/loki:2.8.11"
 image_registry: "registry:2"
