--- a/config/authelia/configuration.yaml
+++ b/config/authelia/configuration.yaml
@@ -1,7 +1,7 @@
 ---
 theme: dark
 jwt_secret: a_very_important_secret
-default_redirection_url: http://google.com
+default_redirection_url: https://google.com
 default_2fa_method: ""
 
 server:
