--- a/config/gitea/app.ini
+++ b/config/gitea/app.ini
@@ -15,8 +15,8 @@ APP_DATA_PATH = /data/gitea
 DOMAIN = localhost
 SSH_DOMAIN = localhost
 HTTP_PORT = 3000
-ROOT_URL = http://gitea
-DISABLE_SSH = false
+ROOT_URL = https://git.{{ .Values.domainName }}.{{ .Values.tld }}
+DISABLE_SSH = true
 SSH_PORT = 22
 SSH_LISTEN_PORT = 22
 LFS_START_SERVER = false
