--- a/.gitea/workflows/pr.yaml
+++ b/.gitea/workflows/pr.yaml
@@ -12,8 +12,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        with:
-          ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Install helm
         run: |
@@ -23,17 +21,14 @@ jobs:
           apt-get update
           apt-get install helm
 
-      - name: Lint helm chart
-        run: helm lint .
-
       - name: Install kubeconform
         run: |
           wget https://github.com/yannh/kubeconform/releases/download/v0.6.4/kubeconform-linux-amd64.tar.gz
           tar xf kubeconform-linux-amd64.tar.gz
           cp kubeconform /usr/local/bin
 
-      - name: Generate templated chart
-        run: helm dependency build && make env=prod template 
+      - name: Install taskfile
+        run: sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d 
 
-      - name: Lint templated chart
-        run: kubeconform ./template.yaml 
+      - name: Lint helm chart
+        run: task lint  
