--- a/.gitea/workflows/pr.yaml
+++ b/.gitea/workflows/pr.yaml
@@ -31,4 +31,4 @@ jobs:
         run: sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d 
 
       - name: Lint helm chart
-        run: task lint  
+        run: ./bin/task lint --yes
