--- a/.gitea/workflows/deploy.yaml
+++ b/.gitea/workflows/deploy.yaml
@@ -55,6 +55,9 @@ jobs:
           tar xf kubeconform-linux-amd64.tar.gz
           cp kubeconform /usr/local/bin
 
+      - name: Install jq
+        run: apt update && apt install -y jq
+
       - name: Install taskfile
         run: sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d
 
