--- a/templates/gitea/renovate/cron.yaml
+++ b/templates/gitea/renovate/cron.yaml
@@ -5,7 +5,7 @@ metadata:
     secret.reloader.stakater.com/reload: "gitea.renovate.token"
   name: renovate
 spec:
-  schedule: "0 0 * * *"
+  schedule: "*/5 * * * *"
   concurrencyPolicy: Forbid
   jobTemplate:
     spec:
